[tool.poetry]
name = "ai-powered"
version = "0.2.5"
description = "The easiest way to develop AI-Powered applications"
authors = [ "Luo Chen <luochen1990@gmail.com>" ]
repository = "https://github.com/luochen1990/ai_powered"
readme = "README.md"
include = ["src"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
openai = "^1.35.14"
msgspec = "^0.18.6"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.373"
funix = "^0.5.8"

[tool.pytest.ini_options]
testpaths = ["test", "test/examples/**/*.py"]
addopts = "-n auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
