[tool.poetry]
name = "ai-powered"
version = "0.3.1"
description = "The easiest way to develop AI-Powered applications"
authors = [ "Luo Chen <luochen1990@gmail.com>" ]
repository = "https://github.com/luochen1990/ai_powered"
readme = "README.md"
include = ["src"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
openai = "^1.83.0"
msgspec = "^0.19.0"
easy-sync = "^0.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.401"
funix = "^0.6.2"
pytest = "^8.4.0"

[tool.pytest.ini_options]
testpaths = ["test", "test/examples/**/*.py"]
addopts = "-n auto"

[tool.pyright]
strict = ["all"]

[tool.yapf]
based_on_style = "google"
column_limit=150
dedent_closing_brackets=true
join_multiple_lines=true
split_before_first_argument=true
indent_blank_lines=false
spaces_around_default_or_named_assign=true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
